[package]
name = "home_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
pulldown-cmark = "0.9.0"
serde_derive = "1.0.59"
serde_json = "1.0.74"
serde = { version = "1.0.132", features = ["derive"]  }
gloo = "0.5.0"
wasm-bindgen-futures = "0.4.28"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
